@@ -34,6 +34,7 @@ $wgQueryPages = array(
 	array( 'UncategorizedCategoriesPage',   'Uncategorizedcategories'       ),
 	array( 'UncategorizedPagesPage',        'Uncategorizedpages'            ),
 	array( 'UncategorizedImagesPage',       'Uncategorizedimages' 			),
+	array( 'UncategorizedTemplatesPage',	'Uncategorizedtemplates'		),
 	array( 'UnusedCategoriesPage',          'Unusedcategories'              ),
 	array( 'UnusedimagesPage',              'Unusedimages'                  ),
 	array( 'WantedCategoriesPage',          'Wantedcategories'              ),
